Fixing alignment of prev/next buttons on carousels

--- a/assets/styles/components/_page-blocks.scss
+++ b/assets/styles/components/_page-blocks.scss
@@ -255,6 +255,7 @@ body.page {
       bottom: -70px;
       display: flex;
       transform: none;
+      align-items: center;
 
       span {
         @include headline-four;
