--- a/assets/styles/pages/_browse.scss
+++ b/assets/styles/pages/_browse.scss
@@ -22,11 +22,12 @@ body.page-browse {
       padding: 0;
       z-index: 1;
       width: auto;
-      color: $white;
       height: 70px;
+      color: $white;
       bottom: -70px;
       display: flex;
       transform: none;
+      align-items: center;
 
       span {
         @include headline-four;
